--- a/VinegarSystemSurvey/VinegarSystemSurvey.Rmd
+++ b/VinegarSystemSurvey/VinegarSystemSurvey.Rmd
@@ -19,7 +19,7 @@ library(xml2)
 library(jsonlite)
 ```
 
-# THIS IS WIP!
+![](https://repository-images.githubusercontent.com/590650708/d3e73868-2470-4ba2-aa90-522ea10cc522)
 
 This file (and full data) is available as a .Rmd file at <https://vinegarhq.org/VinegarSystemSurvey.Rmd>
 
@@ -60,6 +60,8 @@ While Merlin was designed to collect as much pertinent information as possible, 
 Additionally, we were not able to identify whether Roblox Player was successful at launching on the system due to a lack of bindings to the Roblox executable, but are working on a fix for a future survey.
 
 Our GPU data collection only includes driver name, but will be improved in a future release to collect actual model names.
+
+This report was created based on data retrieved on January 3, 2024. Any systems submitted after this date was not recorded as part of this document.
 
 ## Results
 
@@ -105,9 +107,7 @@ age_calc <- function(date) {
 }
 ```
 
-
-
-```{r cpuscraper}
+```{r cpuscraper, eval=FALSE, include=FALSE}
 # WikiChip scraper
 # WARNING: WikiChip is missing a LOT of data, so prepare to do a lot of manual editing.
 
@@ -211,8 +211,7 @@ for (x in 1:length(cpu_stats$cpu)) { # change starting IDX as csv is filled.
 }
 ```
 
-```{r eval=FALSE, include=FALSE}
-
+```{r}
 ages <- read.csv("CPUAgeStats.csv")
 ages %>%
   uncount(n) -> ages_uncounted
@@ -220,15 +219,9 @@ ages %>%
 ages_uncounted %>%
     ggplot(aes(cpu_age_in_years)) + 
       geom_histogram(na.rm = TRUE)
-
-mean(ages_uncounted$cpu_age_in_years, na.rm = TRUE)
-sd(ages_uncounted$cpu_age_in_years, na.rm = TRUE)
-min(ages_uncounted$cpu_age_in_years, na.rm = TRUE)
-ages$cpu[which(ages$cpu_age_in_years == max(ages_uncounted$cpu_age_in_years, na.rm = TRUE))]
-
-max(ages_uncounted$cpu_age_in_years, na.rm = TRUE)
-
 ```
+
+The CPU list (n = `r nrow(ages_uncounted)`) is skewed right with a median age of `r median(ages_uncounted$cpu_age_in_years, na.rm = TRUE)` and a standard deviation of `r sd(ages_uncounted$cpu_age_in_years, na.rm = TRUE)`. The newest processor is `r ages$cpu[which(ages$cpu_age_in_years == min(ages_uncounted$cpu_age_in_years, na.rm = TRUE))]` at `r min(ages_uncounted$cpu_age_in_years, na.rm = TRUE)` years old, and the oldest is `r ages$cpu[which(ages$cpu_age_in_years == max(ages_uncounted$cpu_age_in_years, na.rm = TRUE))]` at `r max(ages_uncounted$cpu_age_in_years, na.rm = TRUE)` years old.
 
 ### AVX Support
 
@@ -267,10 +260,12 @@ With `r (sum(as.logical(merlin$flatpak)) / nrow(merlin)) * 100`% of users on Fla
 
 Additionally, the large percentage of individuals successfully on Flatpak may indicate its viability as a platform for official Roblox support.
 
-## License
+## Licenses
 
 Merlin is licensed under GPL 3.0. See the Merlin GitHub page for more information.
 
 [Vinegar Merlin Hardware Survey Report (Dec 2023)](https://vinegarhq.org/VinegarSystemSurvey.html) © 2024 by [lunarlattice](https://github.com/lunarlettuce) is licensed under [CC BY-SA 4.0](http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1)
 
-[Vinegar Merlin Hardware Survey Report (Dec 2023)](https://vinegarhq.org/VinegarSystemSurvey.Rmd) © 2024 by [lunarlattice](https://github.com/lunarlettuce) is licensed under [CC BY-SA 4.0](http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1) (Rmd File)
+All raw data produced by Merlin is licensed under CC-BY-SA 4.0 by lunarlattice.
+
+CPU age data was retrieved from techpowerup.com and notebookcheck.net. All trademarks are properties of their respective owners.
